@@ -22,7 +22,8 @@
 int
 main(void)
 {
-    char *principal, *config, *path;
+    const char *principal;
+    char *config, *path;
     const char *cache;
     pid_t remctld;
     struct remctl *r;
@@ -78,6 +79,5 @@ main(void)
 
     /* Clean up. */
     remctld_stop(remctld);
-    kerberos_cleanup();
     return 0;
 }
