@@ -25,7 +25,8 @@
 int
 main(void)
 {
-    char *principal, *config, *path;
+    const char *principal;
+    char *config, *path;
     struct remctl *r;
     struct remctl_output *output;
     pid_t remctld;
@@ -107,6 +108,5 @@ main(void)
     remctl_close(r);
 
     remctld_stop(remctld);
-    kerberos_cleanup();
     return 0;
 }
